--- a/beginner/static-site/Dockerfile
+++ b/beginner/static-site/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx
 ENV AUTHOR=Docker
 
 WORKDIR /usr/share/nginx/html
-COPY Hello_docker.html /usr/share/nginx/html
+COPY Hello_docker.html /usr/share/nginx/html/Hello_docker.html
 
 CMD cd /usr/share/nginx/html && sed -e s/Docker/"$AUTHOR"/ Hello_docker.html > index.html ; nginx -g 'daemon off;'
 
